se agregó redicción de whatsapp

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                 <a href="#contact" class="nav-item nav-link">Contacto</a>
             </div>
             <div class="h-100 d-lg-inline-flex align-items-center d-none">
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href="https://www.instagram.com/sippaconsultoria/"><i class="fab fa-instagram"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href="https://www.facebook.com/consultoriasippa"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" ><i class="fab fa-whatsapp"></i></a>
+                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href="https://www.instagram.com/sippaconsultoria/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href="https://www.facebook.com/consultoriasippa" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href="https://api.whatsapp.com/send?phone=59173174975&text=Hola%20quiero%20más%20información." target="_blank" ><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
     </nav>
@@ -1171,7 +1171,7 @@
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-2" href="https://www.instagram.com/sippaconsultoria/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-2" href="https://www.facebook.com/consultoriasippa" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-outline-secondary rounded-circle me-2" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                        <a class="btn btn-square btn-outline-secondary rounded-circle me-2" href="https://api.whatsapp.com/send?phone=59173174975&text=Hola%20quiero%20más%20información." target="_blank"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
