se añadió funcionalidad de llamada

--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@
             </div>
 
             <div class="d-flex flex-row w-100 justify-content-center align-items-center gap-4 mt-3">
-                <img src="./img/phone.svg" width="50" height="50" alt="">
+                <a href="tel:73174975"><img src="./img/phone.svg" width="50" height="50" alt=""></a> 
                 <div style="width: 250px;">
                     <p class="p-contact text-left w-100 m-0">Número telefónico</p>
                     <p class="text-left w-100 m-0">(+591) 73174975</p>
