se modificó número telefónico

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="btn-sm-square rounded-circle bg-primary me-2">
                         <small class="fa fa-phone-alt text-white"></small>
                     </div>
-                    <small>(+591) 73174975</small>
+                    <small>(+591) 68807086</small>
                 </div>
                 <!-- <div class="h-100 d-inline-flex align-items-center py-3">
                     <div class="btn-sm-square rounded-circle bg-primary me-2">
@@ -115,7 +115,7 @@
             <div class="h-100 d-lg-inline-flex align-items-center d-none">
                 <a class="btn btn-square rounded-circle bg-light text-primary me-2" href="https://www.instagram.com/sippaconsultoria/" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a class="btn btn-square rounded-circle bg-light text-primary me-2" href="https://www.facebook.com/consultoriasippa" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href="https://api.whatsapp.com/send?phone=59173174975&text=Hola%20quiero%20más%20información." target="_blank" ><i class="fab fa-whatsapp"></i></a>
+                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href="https://api.whatsapp.com/send?phone=59168807086&text=Hola%20quiero%20más%20información." target="_blank" ><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
     </nav>
@@ -611,7 +611,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Tansredes</td>
+                                            <td>Transredes</td>
                                             <td>2000</td>
                                             <td>Ruido</td>
                                         </tr>
@@ -648,7 +648,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Tansredes</td>
+                                            <td>Transredes</td>
                                             <td>2000</td>
                                             <td>Ruido</td>
                                         </tr>
@@ -684,7 +684,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Tansredes</td>
+                                            <td>Transredes</td>
                                             <td>2000</td>
                                             <td>Ruido</td>
                                         </tr>
@@ -719,7 +719,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Tansredes</td>
+                                            <td>Transredes</td>
                                             <td>2000</td>
                                             <td>Ruido</td>
                                         </tr>
@@ -754,7 +754,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Tansredes</td>
+                                            <td>Transredes</td>
                                             <td>2000</td>
                                             <td>Ruido</td>
                                         </tr>
@@ -789,7 +789,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Tansredes</td>
+                                            <td>Transredes</td>
                                             <td>2000</td>
                                             <td>Ruido</td>
                                         </tr>
@@ -824,7 +824,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Tansredes</td>
+                                            <td>Transredes</td>
                                             <td>2000</td>
                                             <td>Ruido</td>
                                         </tr>
@@ -859,7 +859,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Tansredes</td>
+                                            <td>Transredes</td>
                                             <td>2000</td>
                                             <td>Ruido</td>
                                         </tr>
@@ -894,7 +894,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Tansredes</td>
+                                            <td>Transredes</td>
                                             <td>2000</td>
                                             <td>Ruido</td>
                                         </tr>
@@ -1146,10 +1146,10 @@
             </div>
 
             <div class="d-flex flex-row w-100 justify-content-center align-items-center gap-4 mt-3">
-                <a href="tel:73174975"><img src="./img/phone.svg" width="50" height="50" alt=""></a> 
+                <a href="tel:68807086"><img src="./img/phone.svg" width="50" height="50" alt=""></a> 
                 <div style="width: 250px;">
                     <p class="p-contact text-left w-100 m-0">Número telefónico</p>
-                    <p class="text-left w-100 m-0">(+591) 73174975</p>
+                    <p class="text-left w-100 m-0">(+591) 68807086</p>
                 </div>
             </div>
 
@@ -1166,12 +1166,12 @@
                 <div class="col-lg-6 col-md-6">
                     <h5 class="text-light mb-4">Dirección</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Av. Cristobal de Mendoza # 273, plazuela Guaraní, zona la ramada, Santa Cruz de la Sierra, Bolivia</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>(+591) 73174975</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>(+591) 68807086</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>sippaconsultoria@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-2" href="https://www.instagram.com/sippaconsultoria/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-2" href="https://www.facebook.com/consultoriasippa" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-outline-secondary rounded-circle me-2" href="https://api.whatsapp.com/send?phone=59173174975&text=Hola%20quiero%20más%20información." target="_blank"><i class="fab fa-whatsapp"></i></a>
+                        <a class="btn btn-square btn-outline-secondary rounded-circle me-2" href="https://api.whatsapp.com/send?phone=59168807086&text=Hola%20quiero%20más%20información." target="_blank"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
